test/fixtures/public/fail/semantic/extra/static.jmm
/*  REASON:
    Use of non static function in static context
*/

class T {
    public static void main(String[] a) {
        T.test1();
        T.test2();
    }

    public static int test1(){
        return 0;
    }

    public int test2() {
        return 0;
    }
}
